--- a/public/css/style.css
+++ b/public/css/style.css
@@ -384,7 +384,7 @@ Footer
  ========================================================================== */
 #footer {background-color:#0F141A; background-color: #0C0C0C;}
 #footer p { color: #aaa; font-size: 14px;}
-#footer h4 {font-size: 16px; color: #FFF;}
+#footer h4 {font-size: 16px; color: #FFF;margin-left: 5px;}
 #footer a {color: #f5f5f5; font-size: 14px;}
 	#footer a:hover {color: #FFF;}
 #footer hr {border-top:1px solid rgba(255,255,255,0.2); margin-top: 35px; margin-bottom: 35px;}
@@ -419,7 +419,7 @@ Contact
 Social Links
  ========================================================================== */
 .social {}
-.social li {display: inline-block; width: 35px; height: 35px; border-radius: 3px; text-align: center; line-height: 35px; webkit-transition: background-color 400ms ease-out 0.2s; -moz-transition: background-color 400ms ease-out 0.2s; -o-transition: background-color 400ms ease-out 0.2s; transition: background-color 400ms ease-out 0.2s;}
+.social li {margin: 5px; display: inline-block; width: 35px; height: 35px; border-radius: 3px; text-align: center; line-height: 35px; webkit-transition: background-color 400ms ease-out 0.2s; -moz-transition: background-color 400ms ease-out 0.2s; -o-transition: background-color 400ms ease-out 0.2s; transition: background-color 400ms ease-out 0.2s;}
 .social li a { color: #fff; }
 .social li.facebook { background: #204385; }
 .social li.twitter { background: #2aa9e0; }
