--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1609,3 +1609,70 @@ address .info i {
     opacity: 0.6;
     width: 20px;
 }
+.infobox {
+    font-family: 'Arial', sans-serif;
+    display: block;
+    width: 295px;
+    position: relative;
+}
+.infobox .inner {
+    border-bottom: 35px solid #ff513f;
+}
+.infobox .inner .image {
+    width: 100%;
+    position: relative;
+}
+.infobox .inner .image .overlay {
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+    opacity: 0;
+    -moz-transition: 0.4s;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+    background-color: rgba(0, 0, 0, 0.7);
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    text-align: center;
+    width: 100%;
+}
+.infobox .inner .image .description .meta {
+    -moz-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.05);
+    -webkit-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.05);
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.05);
+    background-color: #fff;
+    bottom: -60px;
+    min-width: 259px;
+    right: 0;
+    padding: 22px;
+    position: absolute;
+    z-index: 1;
+}
+.infobox .inner .image .description .meta h2 {
+    -moz-transition: 0.4s;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+    color: #474747;
+    font-size: 14px;
+    font-weight: bold;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    padding: 0;
+    text-transform: none;
+}
+.infobox .inner .image .description .meta figure {
+    color: #474747;
+    font-size: 12px;
+}
+.infobox .inner .image .description .meta i {
+    color: #ff513f;
+    bottom: 0;
+    height: 10px;
+    margin: auto;
+    position: absolute;
+    top: 0;
+    right: 15px;
+}
+.infobox .inner .image img {
+    width: 100%;
+}
